fix(activity-board): Only set delay on iOS and add css for overlow scroll
Lanes and cards now use the desired scrolling behavior and default touch actions are now prevented.

Closes: #1148

--- a/app/client/stylesheets/components/boardview/_boardview-lane.scss
+++ b/app/client/stylesheets/components/boardview/_boardview-lane.scss
@@ -6,6 +6,13 @@
     border-radius: 4px;
     position: relative;
     max-width: 100vw;
+    -webkit-overflow-scrolling: auto;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 
     &__header, &__footer {
         position: absolute;
